// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`world-v2 initWorld new world 1`] = `
{
  "derived": {
    "beltPaths": [],
    "tiles": {},
  },
  "nextEntityId": 0,
  "origin": {
    "entities": {},
  },
}
`;

exports[`world-v2 tryAddEntities add belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
      },
    },
    "nextEntityId": 1,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add belt loop 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": false,
            },
            {
              "direction": "WestEast",
              "id": "1",
              "invert": false,
            },
            {
              "direction": "SouthWest",
              "id": "2",
              "invert": true,
            },
            {
              "direction": "NorthSouth",
              "id": "3",
              "invert": false,
            },
            {
              "direction": "NorthSouth",
              "id": "4",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
        "1.0": {
          "entityId": "1",
        },
        "2.0": {
          "entityId": "2",
        },
        "2.1": {
          "entityId": "3",
        },
        "2.2": {
          "entityId": "4",
        },
      },
    },
    "nextEntityId": 5,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            2,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "3": {
          "id": "3",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            2,
            1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "4": {
          "id": "4",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            2,
            2,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add belt loop 2`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "EastSouth",
              "id": "0",
              "invert": true,
            },
            {
              "direction": "WestEast",
              "id": "1",
              "invert": false,
            },
            {
              "direction": "SouthWest",
              "id": "2",
              "invert": true,
            },
            {
              "direction": "NorthSouth",
              "id": "3",
              "invert": false,
            },
            {
              "direction": "WestNorth",
              "id": "4",
              "invert": true,
            },
            {
              "direction": "WestEast",
              "id": "5",
              "invert": true,
            },
            {
              "direction": "NorthEast",
              "id": "6",
              "invert": true,
            },
            {
              "direction": "NorthSouth",
              "id": "7",
              "invert": true,
            },
          ],
          "loop": true,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
        "0.1": {
          "entityId": "7",
        },
        "0.2": {
          "entityId": "6",
        },
        "1.0": {
          "entityId": "1",
        },
        "1.2": {
          "entityId": "5",
        },
        "2.0": {
          "entityId": "2",
        },
        "2.1": {
          "entityId": "3",
        },
        "2.2": {
          "entityId": "4",
        },
      },
    },
    "nextEntityId": 8,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            2,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "3": {
          "id": "3",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            2,
            1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "4": {
          "id": "4",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            2,
            2,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "5": {
          "id": "5",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            2,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "6": {
          "id": "6",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            2,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "7": {
          "id": "7",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add east-south belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": true,
            },
            {
              "direction": "EastSouth",
              "id": "1",
              "invert": false,
            },
            {
              "direction": "NorthSouth",
              "id": "2",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "-1.0": {
          "entityId": "1",
        },
        "-1.1": {
          "entityId": "2",
        },
        "0.0": {
          "entityId": "0",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            -1,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            -1,
            1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add inverted east-south belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "NorthSouth",
              "id": "0",
              "invert": true,
            },
            {
              "direction": "EastSouth",
              "id": "1",
              "invert": true,
            },
            {
              "direction": "WestEast",
              "id": "2",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.-1": {
          "entityId": "1",
        },
        "0.0": {
          "entityId": "0",
        },
        "1.-1": {
          "entityId": "2",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            -1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            -1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add inverted north-east belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": true,
            },
            {
              "direction": "NorthEast",
              "id": "1",
              "invert": true,
            },
            {
              "direction": "NorthSouth",
              "id": "2",
              "invert": true,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "-1.-1": {
          "entityId": "2",
        },
        "-1.0": {
          "entityId": "1",
        },
        "0.0": {
          "entityId": "0",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            -1,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            -1,
            -1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add inverted north-south belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "NorthSouth",
              "id": "0",
              "invert": true,
            },
            {
              "direction": "NorthSouth",
              "id": "1",
              "invert": true,
            },
            {
              "direction": "NorthSouth",
              "id": "2",
              "invert": true,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "2",
        },
        "0.1": {
          "entityId": "1",
        },
        "0.2": {
          "entityId": "0",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            2,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add inverted south-west belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "NorthSouth",
              "id": "0",
              "invert": true,
            },
            {
              "direction": "SouthWest",
              "id": "1",
              "invert": false,
            },
            {
              "direction": "WestEast",
              "id": "2",
              "invert": true,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "-1.-1": {
          "entityId": "2",
        },
        "0.-1": {
          "entityId": "1",
        },
        "0.0": {
          "entityId": "0",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            -1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            -1,
            -1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add inverted west-east belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": true,
            },
            {
              "direction": "WestEast",
              "id": "1",
              "invert": true,
            },
            {
              "direction": "WestEast",
              "id": "2",
              "invert": true,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "2",
        },
        "1.0": {
          "entityId": "1",
        },
        "2.0": {
          "entityId": "0",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            2,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add inverted west-north belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "NorthSouth",
              "id": "0",
              "invert": false,
            },
            {
              "direction": "WestNorth",
              "id": "1",
              "invert": true,
            },
            {
              "direction": "WestEast",
              "id": "2",
              "invert": true,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "2",
        },
        "1.-1": {
          "entityId": "0",
        },
        "1.0": {
          "entityId": "1",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            -1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add north-east belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "NorthSouth",
              "id": "0",
              "invert": false,
            },
            {
              "direction": "NorthEast",
              "id": "1",
              "invert": false,
            },
            {
              "direction": "WestEast",
              "id": "2",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
        "0.1": {
          "entityId": "1",
        },
        "1.1": {
          "entityId": "2",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add north-south belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "NorthSouth",
              "id": "0",
              "invert": false,
            },
            {
              "direction": "NorthSouth",
              "id": "1",
              "invert": false,
            },
            {
              "direction": "NorthSouth",
              "id": "2",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
        "0.1": {
          "entityId": "1",
        },
        "0.2": {
          "entityId": "2",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            2,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add south-west belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": false,
            },
            {
              "direction": "SouthWest",
              "id": "1",
              "invert": true,
            },
            {
              "direction": "NorthSouth",
              "id": "2",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
        "1.0": {
          "entityId": "1",
        },
        "1.1": {
          "entityId": "2",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add two disconnected belts 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": false,
            },
          ],
          "loop": false,
        },
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "1",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
        "2.0": {
          "entityId": "1",
        },
      },
    },
    "nextEntityId": 2,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            2,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add west-east belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": false,
            },
            {
              "direction": "WestEast",
              "id": "1",
              "invert": false,
            },
            {
              "direction": "WestEast",
              "id": "2",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
        "1.0": {
          "entityId": "1",
        },
        "2.0": {
          "entityId": "2",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            2,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities add west-north belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": false,
            },
            {
              "direction": "WestNorth",
              "id": "1",
              "invert": false,
            },
            {
              "direction": "NorthSouth",
              "id": "2",
              "invert": true,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
        "1.-1": {
          "entityId": "2",
        },
        "1.0": {
          "entityId": "1",
        },
      },
    },
    "nextEntityId": 3,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "1": {
          "id": "1",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
        "2": {
          "id": "2",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            1,
            -1,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities more than two adjacent belts error 1`] = `
{
  "left": [
    {
      "position": [
        1,
        0,
      ],
      "type": "belt-has-more-than-two-adjacent-belts",
    },
  ],
  "right": null,
}
`;

exports[`world-v2 tryAddEntities replace belt 1`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
      },
    },
    "nextEntityId": 1,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;

exports[`world-v2 tryAddEntities replace belt 2`] = `
{
  "left": null,
  "right": {
    "derived": {
      "beltPaths": [
        {
          "entities": [
            {
              "direction": "WestEast",
              "id": "0",
              "invert": false,
            },
          ],
          "loop": false,
        },
      ],
      "tiles": {
        "0.0": {
          "entityId": "0",
        },
      },
    },
    "nextEntityId": 1,
    "origin": {
      "entities": {
        "0": {
          "id": "0",
          "items": [],
          "layerId": "Layer1",
          "offset": 0,
          "position": [
            0,
            0,
          ],
          "size": [
            1,
            1,
          ],
          "type": "Belt",
          "velocity": 0,
        },
      },
    },
  },
}
`;
